fixed errors left from editing and spacing on home page

--- a/NAMI/css/style.css
+++ b/NAMI/css/style.css
@@ -467,7 +467,6 @@ hr {
     
     .data{
         justify-items: center;
-        border: 3px solid red;
     }
     
     .dataInfo{
